feat(auth): 增加用户管理与默认管理员脚本
